# uatp

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .security-config.yaml  ARCHITECTURE.md  ATTRIBUTION_SECURITY_IMPLEMENTATION.md  AUTO_CAPTURE_PHASE3_BASEHOOK_COMPLETE.md  AUTO_CAPTURE_PHASE3_COMPLETE.md  AUTO_CAPTURE_PHASE3_PROGRESS.md  AUTO_CAPTURE_SETUP.md  CAPSULE_SYSTEM_COMPREHENSIVE_ANALYSIS.md  CAPSULE_VERSIONS_COMPARISON.md  CHANGELOG.md  CHATGPT_AUTO_CAPTURE_GUIDE.md  CHATGPT_PROXY_SETUP.md  CIVILIZATION_INFRASTRUCTURE_PLAN.md  CLAUDE.md  CLAUDE_CODE_SESSION_NOTES.md  CODE_OF_CONDUCT.md  COMPLETE_FRONTEND_SUMMARY.md  COMPLETE_VISION_BLUEPRINT_v2.rtf  COMPONENT_DISCOVERY_COMPLETE.md  COMPREHENSIVE_SYSTEM_OVERVIEW.md  CONTRIBUTING.md  CRYPTOGRAPHIC_SECURITY_AUDIT_REPORT.md  CRYPTOGRAPHIC_VERIFICATION_SUMMARY.md  CURRENT_STATE.md  DATABASE_SETUP_VERIFIED.md  DATA_SEPARATION_STRATEGY.md  DEMO_MODE_IMPLEMENTATION_GUIDE.md  DEPLOYMENT.md  DISTRIBUTED_TRACING_AND_ERROR_TRACKING_COMPLETE.md  Dockerfile  Dockerfile.production  EXPERT_PANEL_FIXES_COMPLETE.md  FRONTEND_BACKEND_GAP_ANALYSIS.md  FRONTEND_BACKEND_STATUS.md  (+393 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.uatp_keys/: dilithium3_private.bin.enc  ed25519_private.pem.enc  ed25519_public.pem  ml_dsa_65_private.bin.enc  uatp_private.pem.enc  uatp_public.pem
alembic/: env.py
archive/: README.md  RESTRUCTURE_PLAN.md
audit_reports/: audit_2025_10_26_051004_human_summary_20251026_051004.txt  audit_2025_10_26_051004_machine_report_20251026_051004.json  audit_2025_10_26_201247_human_summary_20251026_201247.txt  audit_2025_10_26_201247_machine_report_20251026_201247.json  audit_2025_11_05_065354_human_summary_20251105_065354.txt  audit_2025_11_05_065354_machine_report_20251105_065354.json
chain_seals/: live-test-chain_seal-1772724574-36bfc284.json  live-test-chain_seals.json  python-test-chain_seal-1772682378-8b633424.json  python-test-chain_seals.json  test-chain-0095f267_seal-1751507204-7c924ce4.json  test-chain-0095f267_seals.json  test-chain-34b30d5e_seal-1751507258-e09de569.json  test-chain-34b30d5e_seals.json  test-chain-6f1684ee_seal-1751505889-25ce4416.json  test-chain-6f1684ee_seals.json  test-chain-7d4bec3b_seal-1751506542-f0b9dc93.json  test-chain-7d4bec3b_seals.json  test-chain-950ad79b_seal-1751507411-63ec2dae.json  test-chain-950ad79b_seals.json  test-chain-e88f7601_seal-1751506758-aeb36d02.json  test-chain-e88f7601_seals.json  test-chain_seal-1772681096-5874d3ef.json  test-chain_seal-1772681142-90ec09b5.json  test-chain_seal-1772723212-5c059a4a.json  test-chain_seals.json  verify-test_seal-1772681096-ed4bdd84.json  verify-test_seal-1772681142-ebed6d2f.json  verify-test_seal-1772723212-ae70cb0c.json  verify-test_seals.json
config/: prometheus.yml  setup.json
core/: capsule.py  crypto.py
dashboards/: economic_capsule_visualization.py  governance_visualization.py  trust_renewal_visualization.py  unified_capsule_visualization_dashboard.py
data/: calibration_state.json
demo/: README.md  dashboard_demo.py  demo_config.json  e2e_integration_demo.py  event_driven_demo.py  run_demo.py  test_integration.py  workflow_automation_demo.py
docs/: 90_DAY_PILOT_PROPOSAL.md  API_ARCHITECTURE.md  BEFORE_AFTER_DEMO_SCRIPT.md  CAPSULE_ENHANCEMENT_GAPS.md  CAPTURE_SYSTEM_ARCHITECTURE.md  CODEBASE_CLEANUP_REPORT.md  COMPLETE_USER_UTILIZATION_GUIDE.md  COMPREHENSIVE_SYSTEM_MANUAL.md  CRYPTO_MATRIX.md  CYBERNETIC_VSM_INTEGRATION.md  DATA_MARKETPLACE_IMPLEMENTATION.md  ENTERPRISE_ADMIN_GUIDE.md  MARKETPLACE_ROADMAP.md  PDF_CONVERSION_INSTRUCTIONS.md  PHASE_1_IMPLEMENTATION_ROADMAP.md  PREMIUM_REDUCTION_MODEL.md  PRIORITY_TARGET_LIST.md  ROUTER_STATUS_REPORT.md  START_HERE.md  TECHNICAL_QA_ENTERPRISE_BUYERS.md  TECHNICAL_QA_ENTERPRISE_BUYERS.txt  TECHNICAL_QA_ENTERPRISE_BUYERS_BUSINESS_ORDER.md  TECHNICAL_QA_ENTERPRISE_BUYERS_FINAL.md  TECHNICAL_QA_ENTERPRISE_BUYERS_OLD.md  TECHNICAL_QA_ENTERPRISE_BUYERS_REORDERED.md  UATP_2025_MARKET_ANALYSIS.md  UATP_COMPLETE_VISION.md  UATP_Capsule_Engine_Manual.html  UATP_Capsule_Engine_Manual.txt  advanced_features.md  api-documentation.md  backup_system.md  caching_system.md  capsule_milestone_sequence.md  capsule_risk_matrix.md  ci_cd_guide.md  configuration.md  deployment-guide.md  deployment_guide.md  developer_guide.md  (+15 more)
examples/: README.md  enterprise_integration_demo.py  gold_standard_signing.py  hello_world.py  local_signing.py  mock_chain_generator.py  pragmatic_attribution_demo.py  quickstart.py  verify_standalone.py  windsurf_integration_example.py
federation_data/: member_org1.json
frontend/: .env.example  .gitignore  DEMO_MODE_COMPLETE_FIX_PLAN.md  DEMO_MODE_PATTERN.md  DEMO_MODE_TEST_RESULTS.md  Dockerfile  FIX_REMAINING_DASHBOARDS.md  README.md  UATP_PRODUCTION_LAUNCH_STRATEGY.md  debug-env.js  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.js
infra/: SECRETS.md
ios_shortcuts/: UATP_Auto_Capture.shortcut  setup_instructions.txt  shortcut_config.json
k8s/: PRODUCTION_HARDENING_CHECKLIST.md  database-optimization.yaml  ingress.yaml  performance-monitoring.yaml  resource-quotas.yaml  security-network-policies.yaml  security-pod-policies.yaml  security-rbac.yaml  service.yaml  vpa.yaml
migrations/: 004_add_outcome_tracking.sql
mobile_companion/: index.html  manifest.json  uatp_instant_capture.html
monitoring/: PRODUCTION_MONITORING_GUIDE.md
observability/: README.md  otel-collector-config.yaml
outreach/: INSURANCE_ARMILLA_TEMPLATE.md
performance/: locustfile.py
scripts/: analyze_outcomes.py  backfill_embeddings.py  backfill_quality_assessment.py  backfill_rfc3161_timestamps.py  backfill_rich_metadata.py  backup.sh  backup_recovery_cli.py  benchmark.sh  check_honey_token_alerts.py  check_performance_regression.py  cleanup_legacy_files.py  database_backup.py  debug_async_reasoning.py  demo_high_stakes_safety.py  deploy_production.sh  export_for_training.py  fix_capture_imports.py  fix_datetime_utcnow.py  generate_security_report.py  (+14 more)
(+1652 files in other folders)
