[project]
name = "uatp-capsule-engine"
version = "0.1.0"
description = "UATP Capsule Engine: schema-driven, cryptographically sealed capsule chains for agent trust and auditability."
authors = [{name = "Kay", email = "your@email.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["uatp", "agent", "trust", "protocol", "capsule", "ai", "cryptography"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "pydantic>=2.0.0",
    "pynacl>=1.5.0",
    "streamlit>=1.20.0",
    "python-dotenv>=1.0.0",
    "quart>=0.19.4",
    "quart-cors>=0.7.0",
    "quart-schema[pydantic]>=0.22.0",
    "requests>=2.25.0",
    "gunicorn>=20.0.0",
    "uvicorn[standard]>=0.23.2,<0.24.0",
    "nest-asyncio>=1.5.8,<1.6.0",
    "filelock>=3.12.2,<3.13.0",
    "tabulate>=0.8.0",
    "networkx>=2.5.0",
    "graphviz>=0.17.0",
    "openai>=1.0.0",
    "orjson>=3.9.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
    "pytest-cov>=4.0.0"
]
dev = [
    "black>=22.0.0",
    "mypy>=0.910",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "ruff>=0.4.0",
    "pre-commit>=3.3.3",
    "pip-tools>=7.0.0"
]
docs = [
    "mkdocs>=1.3.0",
    "mkdocs-material>=8.3.0"
]
all = ["uatp-capsule-engine[test,dev,docs]"]

[project.urls]
"Homepage" = "https://github.com/username/uatp-capsule-engine"
"Bug Tracker" = "https://github.com/username/uatp-capsule-engine/issues"
"Documentation" = "https://username.github.io/uatp-capsule-engine"

[project.scripts]
uatp-capsule = "cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.jsonl", "*.md", "py.typed"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Development tool configurations
[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Exclude legacy code lacking type annotations (to be fixed incrementally)
# Keep strict checking for: sdk/, src/crypto/
exclude = [
    "src/analysis/",
    "src/api/",
    "src/core/",
    "src/embeddings/",
    "src/enrichment/",
    "src/feedback/",
    "src/live_capture/",
    "src/ml/",
    "src/models/",
    "src/reasoning/",
    "src/security/",
    "src/utils/",
    "tests/",
    "test_.*\\.py",  # Root-level test files
]

# Skip type-checking imports from legacy modules
[[tool.mypy.overrides]]
module = [
    "src.security.*",
    "src.analysis.*",
    "src.api.*",
    "src.core.*",
    "src.embeddings.*",
    "src.enrichment.*",
    "src.feedback.*",
    "src.live_capture.*",
    "src.ml.*",
    "src.models.*",
    "src.reasoning.*",
    "src.utils.*",
]
ignore_errors = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W"]
ignore = ["E501"]


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(levelname)s:%(name)s:%(message)s"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "performance: marks tests as performance tests",
    "stress: marks tests as stress tests",
    "security: marks tests as security tests"
]
minversion = "7.0"
testpaths = [
    "tests"
]
norecursedirs = [".*", "build", "dist", "dashboards", "tests/performance"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
