[project]
name = "uatp-capsule-engine"
version = "0.1.0"
description = "UATP Capsule Engine: schema-driven, cryptographically sealed capsule chains for agent trust and auditability."
authors = [{name = "Kayron Calloway", email = "kayron@houseofcalloway.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["uatp", "agent", "trust", "protocol", "capsule", "ai", "cryptography"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "fastapi>=0.109.0",
    "starlette>=0.35.0",
    "pydantic>=2.0.0",
    "pynacl>=1.5.0",
    "python-dotenv>=1.0.0",
    "requests>=2.25.0",
    "uvicorn[standard]>=0.23.2",
    "httpx>=0.26.0",
    "orjson>=3.9.0",
    "aiosqlite>=0.19.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
    "pytest-cov>=4.0.0"
]
dev = [
    "black>=22.0.0",
    "mypy>=0.910",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "ruff>=0.4.0",
    "pre-commit>=3.3.3",
    "pip-tools>=7.0.0"
]
docs = [
    "mkdocs>=1.3.0",
    "mkdocs-material>=8.3.0"
]
all = ["uatp-capsule-engine[test,dev,docs]"]

[project.urls]
"Homepage" = "https://github.com/KayronCalloway/uatp"
"Bug Tracker" = "https://github.com/KayronCalloway/uatp/issues"
"Documentation" = "https://github.com/KayronCalloway/uatp#readme"

[project.scripts]
uatp-capsule = "cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.jsonl", "*.md", "py.typed"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Development tool configurations
[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Exclude legacy code lacking type annotations (to be fixed incrementally)
# Only check: sdk/python/uatp/ (the published SDK)
exclude = """(?x)(
    ^archive/
    | ^src/
    | ^tests/
    | ^test_.*\\.py$
    | ^sdk/python/examples/
)"""

# Ignore missing imports from third-party libraries without stubs
[[tool.mypy.overrides]]
module = ["aiofiles.*", "redis.*", "nacl.*", "fastapi.*", "starlette.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
exclude = [
    "archive/",
    "tests/legacy/",
    "scripts/legacy_fixes/",
    "infra/monitoring/dashboards/",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W"]
ignore = [
    "E501",   # Line too long
    "E402",   # Module level import not at top (often intentional)
    "E712",   # Avoid comparison to True/False (common in test assertions)
    "E721",   # Type comparison (use isinstance)
    "E722",   # Bare except (to be fixed incrementally)
    "B008",   # Function call in default argument (FastAPI Depends pattern)
    "B017",   # pytest.raises(Exception) - blind exception assertion
    "B904",   # Exception chaining (raise from)
    "B018",   # Useless expression
    "F401",   # Imported but unused (often re-exports)
    "F403",   # Star imports
    "F811",   # Redefinition (to fix later)
    "F821",   # Undefined name (to fix later)
    "F841",   # Local variable assigned but never used (common in tests)
    "B007",   # Unused loop variable
    "B027",   # Empty method in abstract class
]


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(levelname)s:%(name)s:%(message)s"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "performance: marks tests as performance tests",
    "stress: marks tests as stress tests",
    "security: marks tests as security tests"
]
minversion = "7.0"
testpaths = [
    "tests"
]
norecursedirs = [".*", "build", "dist", "dashboards", "tests/performance"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
